keycloak/src/main/fabric8/deploymentconfig.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: ${project.artifactId}
  name: ${project.artifactId}
spec:
  replicas: 1
  selector:
    app: ${project.artifactId}
  strategy:
    resources:
      limits:
        memory: "256Mi"
      requests:
        memory: "20Mi"
    type: Recreate
  template:
    metadata:
      name: ${project.artifactId}
      labels:
        app: ${project.artifactId}
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9779"        
    spec:
      containers:
      - name: ${project.artifactId}
        image: teiid-dataservice/${project.artifactId}:${project.version}
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            port: 8080
            path: "/actuator/health"
          initialDelaySeconds: 60
          periodSeconds: 20
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: "/actuator/health"
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 20
          timeoutSeconds: 10
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 9779
          name: prometheus
        - containerPort: 8778
          name: jolokia
        workingDir: /deployments
        resources:
          limits:
            memory: 512Mi
            cpu: 500m
          requests:
            memory: 256Mi
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      -  ${project.artifactId}
      from:
        kind: ImageStreamTag
        name: ${project.artifactId}:latest
    type: ImageChange
  - type: ConfigChange
