keycloak/src/main/fabric8/jdbc-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ${project.artifactId}-jdbc
spec:
  ports:
  - name: ${project.artifactId}-jdbc
    port: 31000
    targetPort: 31000
  selector:
    app: ${project.artifactId}
