keycloak/src/main/fabric8/odata-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: ${project.artifactId}-odata
  labels:
    discovery.3scale.net: true
  annotations:
    discovery.3scale.net/scheme: "http"
    discovery.3scale.net/port: "8080"
    discovery.3scale.net/description-path: "/swagger.json" 
spec:
  sessionAffinity: ClientIP
  ports:
  - name: ${project.artifactId}-odata
    port: 8080
    targetPort: 8080
  selector:
    app: ${project.artifactId}
